--- a/src/pages/sector/sector.styles.scss
+++ b/src/pages/sector/sector.styles.scss
@@ -55,6 +55,7 @@
     align-items: center;
     cursor: pointer;
     background-color: rgba(243, 240, 240, 0.644);
+    text-align: center;
     span {
       font-size: 1.15rem;
       font-weight: 400;
@@ -230,6 +231,16 @@
   .sector-sidebar {
     width: 10rem;
     margin-right: 0rem;
+    .sector-sidebar-box {
+      text-align: center;
+      span {
+        font-size: 1.15rem;
+      }
+      a {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
   }
   .sector-img {
     padding-right: 0.1rem;
