--- a/src/pages/Terrain/terrain.styles.scss
+++ b/src/pages/Terrain/terrain.styles.scss
@@ -210,6 +210,9 @@
         color: rgba(158, 158, 158, 0.884);
       }
     }
+    textarea {
+      overflow: hidden;
+    }
     button {
       font-size: 0.9rem;
       font-family: "Poppins", sans-serif;
