--- a/src/pages/Terrain/terrain.styles.scss
+++ b/src/pages/Terrain/terrain.styles.scss
@@ -35,7 +35,7 @@
       font-size: 3.5rem;
       font-weight: 300;
       margin-bottom: 0;
-
+      font-family: 'Archivo' , sans-serif;
       letter-spacing: 1.3rem;
       b {
         margin-top: 0;
@@ -425,7 +425,7 @@
       .terrain-header-details {
         width: 90%;
         h2 {
-          font-size: 2.7rem;
+          font-size: 2.2rem;
         }
         p {
           text-align: left;
