--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -98,6 +98,9 @@
       transition: all 0.45s cubic-bezier(0.19, 1, 0.22, 1);
       .sector-ul {
         padding-left: 0;
+        &:hover .sector-li:not(:hover) {
+          opacity: 0.7;
+        }
         .sector-li {
           list-style: none;
           padding: 0.3rem 0.4rem 0.3rem;
@@ -166,6 +169,7 @@
         border-radius: 8px;
       }
     }
+
     .menu-active {
       position: fixed;
       width: 28px;
@@ -245,6 +249,7 @@
           transition: all 0.45s cubic-bezier(0.19, 1, 0.22, 1);
           .sector-ul {
             padding-left: 2rem;
+
             .sector-li {
               font-size: 1.22rem;
               list-style: none;
