--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -59,8 +59,8 @@
       }
     }
     .main-li:last-child {
-      border: 2px solid rgb(70, 106, 255);
-      background-color: rgb(70, 106, 255);
+      border: 2px solid #60B9F2;
+      background-color: #60B9F2;
       color: white;
       padding: 0.2rem 1.3rem;
       &:after {
