--- a/src/pages/landing/landing.styles.scss
+++ b/src/pages/landing/landing.styles.scss
@@ -47,7 +47,9 @@
     margin-top: 0.5rem;
     width: 9.5rem;
     font-size: 0.95rem;
-    padding: 0.4rem 1.25rem 0.5rem;
+    padding: 0.4rem 1.2rem 0.5rem;
+    justify-content:center;
+    gap: 0 0.3rem;
     &:hover {
       color: white;
     }
