--- a/src/pages/Terrain/terrain.styles.scss
+++ b/src/pages/Terrain/terrain.styles.scss
@@ -22,7 +22,7 @@
   .terrain-img {
     width: 45%;
     height: auto;
-    object-fit: cover;
+    object-fit: contain;
   }
   .terrain-mobile-img {
     display: none;
@@ -283,8 +283,8 @@
     padding-bottom: 6%;
     .terrain-header {
       .terrain-img {
-        width: 450px;
-        height: 450px;
+        width: 480px;
+        height: 480px;
       }
       .terrain-header-details {
         width: 50%;
