--- a/src/pages/Terrain/terrain.styles.scss
+++ b/src/pages/Terrain/terrain.styles.scss
@@ -118,9 +118,10 @@
     width: 295px;
     height: 350px;
     padding: 1.2rem 0.8rem;
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='34' ry='34' stroke='%23333' stroke-width='5' stroke-dasharray='6%2c 14' stroke-dashoffset='7' stroke-linecap='square'/%3e%3c/svg%3e");
-    border-radius: 34px;
-
+    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='36' ry='36' stroke='black' stroke-width='3' stroke-dasharray='100%2c' stroke-dashoffset='1' stroke-linecap='round'/%3e%3c/svg%3e");
+    border-radius: 36px;
+ 
+ 
     position: relative;
     margin: 0 4rem;
     background-color: rgb(255, 255, 255);
@@ -200,7 +201,7 @@
     input,
     textarea {
       font-family: "Poppins", sans-serif;
-      padding: 0.32rem 0.8rem;
+      padding: 0.4rem 0.8rem;
       border-radius: 10px;
       border: 2px solid #070707;
       margin: 0.5rem 0;
@@ -211,7 +212,7 @@
       }
     }
     textarea {
-      overflow: hidden;
+   height:2rem;
     }
     button {
       font-size: 0.9rem;
@@ -451,7 +452,7 @@
     .terrain-footer-contents {
       margin: 2rem 0;
       width: 80%;
-      height: 380px;
+      height: 360px;
     }
     .footer-2 {
       p {
