--- a/src/pages/stigmi/stigmi.styles.scss
+++ b/src/pages/stigmi/stigmi.styles.scss
@@ -3,14 +3,14 @@
 .stigmi-1cont {
   width: 100%;
   display: flex;
-  height: 100vh;
+ height: 100vh;
   position: relative;
   justify-content: center;
 
   video {
     width: 100%;
-    height: auto;
-    object-fit: cover;
+    height:auto;
+    object-fit: contain;
   }
 
   header {
@@ -26,7 +26,9 @@
     span {
       font-family: "Archivo", serif;
       font-weight: 100;
-
+text-align:center;
+position:relative;
+bottom:3rem;
       &:last-child {
         color: #000000;
         font-size: 25px;
@@ -37,7 +39,9 @@
       &:first-child {
         color: #000000;
         font-size: 55px;
-        letter-spacing: 0.5rem;
+        font-weight:400;
+        letter-spacing: 35px;
+        line-height:1.5;
       }
     }
   }
@@ -88,9 +92,9 @@
 .stigmi-3cont {
   display: flex;
   width: 100%;
-  height: auto;
+  min-height:70vh;
   position: relative;
-
+ 
   img {
     width: 100%;
     height: auto;
@@ -108,7 +112,7 @@
 
     h1 {
       font-family: "Archivo", serif;
-      font-weight: 100;
+      font-weight:400;
       color: #000000;
       font-size: 35px;
       letter-spacing: 1rem;
@@ -119,25 +123,36 @@
       font-family: "Archivo", sans-serif;
       font-weight: 500;
       color: #000000;
-      font-size: 18px;
-      letter-spacing: 0.1rem;
+      font-size: 20px;
+      letter-spacing: 1.25px;
+      line-height:2;
       padding-top: 2rem;
     }
   }
 }
 
-@media screen and (max-width: 766px) {
+@media screen and (max-width: 1100px) {
   .stigmi-1cont {
     height: 90vh;
+    video {
+      width: 100%;
+      height:auto;
+      object-fit: cover;
+    }
   }
   .stigmi-1cont header {
     width: 90%;
     left: 5%;
     top: 42%;
+  } .stigmi-1cont header span  {
+    position:relative;
+    bottom:2rem;
   }
   .stigmi-1cont header span:first-child {
     font-size: 45px;
     text-align: center;
+    letter-spacing:9px;
+    font-weight:300;
   }
   .stigmi-1cont header span:last-child {
     font-size: 20px;
@@ -160,11 +175,12 @@
     font-size: 20px;
     text-align: center;
     padding-top: 2rem;
+    
   }
   .stigmi-3cont {
-    width: 95%;
+    width: 100%;
     position: unset;
-    padding: 3rem 0.5rem 0rem;
+    padding: 3rem 0rem 0rem;
     flex-direction: column-reverse;
   }
   .stigmi-3cont img {
@@ -176,7 +192,8 @@
     position: inherit;
     top: 0%;
     right: 0%;
-    width: 100%;
+    width:90%;
+    margin:0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -185,9 +202,10 @@
     font-size: 30px;
     letter-spacing: 0.5rem;
     text-align: center;
-  }
+    
+  } 
   .stigmi-3cont .stigmi-3cont-content p {
-    font-size: 14px;
+    font-size: 22px;
     letter-spacing: 0.1rem;
     text-align: center;
     padding-top: 2rem;
