--- a/src/pages/stigmi/stigmi.styles.scss
+++ b/src/pages/stigmi/stigmi.styles.scss
@@ -115,18 +115,19 @@ bottom:3rem;
       font-weight:400;
       color: #000000;
       font-size: 35px;
-      letter-spacing: 1rem;
+      
       margin: 0 0;
+      letter-spacing: 33.59px;
     }
 
     p {
       font-family: "Archivo", sans-serif;
       font-weight: 500;
       color: #000000;
-      font-size: 20px;
+      font-size: 19px;
       letter-spacing: 1.25px;
       line-height:2;
-      padding-top: 2rem;
+      padding-top: 1rem;
     }
   }
 }
@@ -200,14 +201,17 @@ bottom:3rem;
   }
   .stigmi-3cont .stigmi-3cont-content h1 {
     font-size: 30px;
-    letter-spacing: 0.5rem;
+ 
     text-align: center;
+    position:relative;
+    left:0.7rem;
     
   } 
   .stigmi-3cont .stigmi-3cont-content p {
-    font-size: 22px;
+    font-size: 18px;
     letter-spacing: 0.1rem;
     text-align: center;
+    line-height:1.5;
     padding-top: 2rem;
   }
 }
