--- a/src/pages/stigmi/stigmi.styles.scss
+++ b/src/pages/stigmi/stigmi.styles.scss
@@ -92,7 +92,7 @@ bottom:3rem;
 .stigmi-3cont {
   display: flex;
   width: 100%;
-  min-height:70vh;
+  height:auto;
   position: relative;
  
   img {
@@ -103,7 +103,7 @@ bottom:3rem;
 
   .stigmi-3cont-content {
     position: absolute;
-    top: 30%;
+    top: 20%;
     right: 5%;
     width: 40%;
     display: flex;
@@ -128,6 +128,7 @@ bottom:3rem;
       letter-spacing: 1.25px;
       line-height:2;
       padding-top: 1rem;
+ 
     }
   }
 }
