--- a/src/pages/stigmi/stigmi.styles.scss
+++ b/src/pages/stigmi/stigmi.styles.scss
@@ -181,7 +181,7 @@ bottom:3rem;
   }
   .stigmi-3cont {
     width: 100%;
-
+    height:auto;
     position: unset;
     padding: 4rem 0rem 0rem;
     flex-direction: column-reverse;
@@ -217,7 +217,8 @@ bottom:3rem;
     letter-spacing: 0.1rem;
     text-align: center;
     line-height:1.5;
-    padding-top:2rem;
+    padding-top:1.8rem;
+  
   }
 }
 @media screen and (max-width: 726px) {
@@ -229,5 +230,9 @@ bottom:3rem;
 @media (min-width: 950px) and (max-width: 1200px) {
   .stigmi-3cont .stigmi-3cont-content {
     top: 15%;
+  } .stigmi-3cont {
+    width: 100%;
+ height:65vh;
+    
   }
 }
