icons update resp img 4

--- a/src/pages/Terrain/terrain.styles.scss
+++ b/src/pages/Terrain/terrain.styles.scss
@@ -92,7 +92,10 @@
       line-height: 1.2;
     }
     span:nth-child(4) {
-      color: #2268e9d0;
+      font-weight:600;   
+        
+    
+      color: #013F89;
     }
   }
 }
